feat(M5): extract FixActionType to shared.model; SuggestedFix model with String type; FixAction.fixType enum; RuleConstraint/Diagnostic use List<SuggestedFix>; Generator chain updated